<?xml version="1.0"?>
<package>
  <name>arl_hand_tracker_msgs</name>
  <version>0.0.1</version>
  <description>The arl_hand_tracker_msgs package</description>

  <maintainer email="arne.hitzmann@gmail.com">user</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>arl_hw_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>arl_hw_msgs</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>geometry_msgs</run_depend>


  <export>
  </export>
</package>
